@@ -32,10 +32,10 @@ EOF
 # Substitute revision and linguas
 linguas=`sed -e '/^#/d' po/LINGUAS`
 if test -d .git/svn; then
- revision=$(git svn find-rev trunk ||
-            git svn find-rev origin/trunk ||
-            git svn find-rev HEAD ||
-            git svn find-rev master)
+ revision=$(git svn find-rev trunk 2>/dev/null ||
+            git svn find-rev origin/trunk 2>/dev/null ||
+            git svn find-rev HEAD 2>/dev/null ||
+            git svn find-rev master 2>/dev/null)
 else
  revision=`LC_ALL=C svn info $0 | awk '/^Revision: / {printf "%05d\n",
 $2}'`
