@@ -1,3 +1,8 @@
+2008-08-31	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Don't print errors when trying to detect the
+	  revision of a git svn repository.
+
 2008-08-17	Brian Tarricone <bjt23@cornell.edu>
 
 	* configure.in.in: Set LIBXFCE4MENU_VERSION_API independently
